--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "vue-class-component": "^7.0.2",
         "vue-property-decorator": "^8.1.0",
         "vue-router": "^3.0.6",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "vuex-class": "^0.3.2"
     },
     "devDependencies": {
         "@types/jest": "^24.0.11",
