--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
-        "test:unit": "vue-cli-service test:unit"
+        "test:unit": "vue-cli-service test:unit",
+        "typedoc": "typedoc --out ./docs/ ./src/"
     },
     "dependencies": {
         "core-js": "^3.1.2",
         "register-service-worker": "^1.6.2",
+        "typedoc": "^0.15.0",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
         "vue-property-decorator": "^8.1.0",
