--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "vue-property-decorator": "^8.1.0",
         "vue-router": "^3.0.6",
         "vuex": "^3.0.1",
-        "vuex-class": "^0.3.2"
+        "vuex-class": "^0.3.2",
+        "vuex-module-decorators": "^0.10.1"
     },
     "devDependencies": {
         "@types/jest": "^24.0.11",
