--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "typedoc": "typedoc --out ./docs/ ./src/"
     },
     "dependencies": {
+        "@types/leaflet": "^1.5.5",
         "core-js": "^3.1.2",
+        "leaflet": "^1.5.1",
         "register-service-worker": "^1.6.2",
         "typedoc": "^0.15.0",
         "vue": "^2.6.10",
