--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/leaflet": "^1.5.5",
         "core-js": "^3.1.2",
+        "jest-css-modules": "^2.1.0",
         "leaflet": "^1.5.1",
         "register-service-worker": "^1.6.2",
         "typedoc": "^0.15.0",
@@ -33,5 +34,10 @@
         "@vue/test-utils": "1.0.0-beta.29",
         "typescript": "~3.5.3",
         "vue-template-compiler": "^2.6.10"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(css)$": "/node_modules/jest-css-modules"
+        }
     }
 }
