--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/leaflet": "^1.5.5",
         "core-js": "^3.1.2",
+        "jest-css-modules": "^2.1.0",
         "leaflet": "^1.5.1",
         "register-service-worker": "^1.6.2",
         "typedoc": "^0.15.0",
