--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@types/leaflet": "^1.5.5",
+        "@types/lodash": "^4.14.149",
         "core-js": "^3.1.2",
         "jest-css-modules": "^2.1.0",
         "leaflet": "^1.5.1",
+        "lodash": "^4.17.15",
         "register-service-worker": "^1.6.2",
         "typedoc": "^0.15.0",
         "vue": "^2.6.10",
