--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vuex-module-decorators": "^0.10.1"
     },
     "devDependencies": {
+        "@mdi/js": "^4.7.95",
         "@types/jest": "^24.0.11",
         "@vue/cli-plugin-babel": "^4.0.0",
         "@vue/cli-plugin-pwa": "^4.0.0",
@@ -36,6 +37,8 @@
         "@vue/cli-plugin-unit-jest": "^4.0.0",
         "@vue/cli-service": "^4.0.0",
         "@vue/test-utils": "1.0.0-beta.29",
+        "file-loader": "^5.0.2",
+        "material-design-icons-iconfont": "^5.0.1",
         "typescript": "~3.5.3",
         "vue-template-compiler": "^2.6.10"
     },
