--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "typedoc": "typedoc --out ./docs/ ./src/"
     },
     "dependencies": {
+        "@mdi/font": "^4.7.95",
         "@types/leaflet": "^1.5.5",
         "@types/lodash": "^4.14.149",
         "core-js": "^3.1.2",
