--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "vuetify": "^2.1.14",
         "vuex": "^3.0.1",
         "vuex-class": "^0.3.2",
-        "vuex-module-decorators": "^0.10.1"
+        "vuex-module-decorators": "^0.10.1",
+        "vuex-smart-module": "^0.3.2"
     },
     "devDependencies": {
         "@types/jest": "^24.0.11",
