--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@vue/cli-plugin-unit-jest": "^4.0.0",
         "@vue/cli-service": "^4.0.0",
         "@vue/test-utils": "1.0.0-beta.29",
-        "typescript": "~3.5.3",
+        "typescript": "^3.6.4",
         "vue-template-compiler": "^2.6.10"
     },
     "jest": {
