--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "core-js": "^3.1.2",
         "geolib": "^3.2.0",
         "jest-css-modules": "^2.1.0",
+        "json-server": "^0.16.1",
         "leaflet": "^1.5.1",
         "lodash": "^4.17.15",
         "register-service-worker": "^1.6.2",
@@ -36,9 +37,9 @@
         "@types/jest": "^24.0.11",
         "@vue/cli-plugin-babel": "^4.0.0",
         "@vue/cli-plugin-pwa": "^4.0.0",
-        "@vue/cli-plugin-typescript": "^4.0.0",
+        "@vue/cli-plugin-typescript": "^4.4.1",
         "@vue/cli-plugin-unit-jest": "^4.0.0",
-        "@vue/cli-service": "^4.0.0",
+        "@vue/cli-service": "^4.4.1",
         "@vue/test-utils": "1.0.0-beta.29",
         "file-loader": "^5.0.2",
         "material-design-icons-iconfont": "^5.0.1",
