--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mdi/font": "^4.7.95",
         "@types/leaflet": "^1.5.5",
         "@types/lodash": "^4.14.149",
+        "axios": "^0.19.2",
         "core-js": "^3.1.2",
         "geolib": "^3.2.0",
         "jest-css-modules": "^2.1.0",
