--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
         "test:unit": "vue-cli-service test:unit --no-cache",
-        "typedoc": "typedoc --out ./docs/ ./src/"
+        "typedoc": "typedoc --out ./docs/ ./src/",
+        "jserver": "./node_modules/.bin/json-server --watch src/jsonserver/get-map.js"
     },
     "dependencies": {
         "@mdi/font": "^4.7.95",
