--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mdi/font": "^4.9.95",
         "@types/leaflet": "^1.5.12",
         "@types/lodash": "^4.14.155",
+        "axios": "^0.19.2",
         "core-js": "^3.6.5",
         "geolib": "^3.3.1",
         "jest-css-modules": "^2.1.0",
